[package]
name = "crusade"
version = "0.1.0"
authors = ["Carter Snook <cartersnook04@gmail.com>"]
edition = "2018"
repository = "https://github.com/crusade-developers/rust"
license = "UNLICENSE"
description = "An SDK to interact with the server nodes on thenewboston cryptocurrency."
keywords = ["thenewboston", "tnb", "cryptocurrency"]

[dependencies]
ed25519_dalek = { package = "ed25519-dalek", version = "1.0", features = ["serde"] }
rand7 = { package = "rand", version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["json"] }
serde_qs = "0.8"
hex = "0.4"
ed25519-dalek-bip32 = "0.1.1"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
anyhow = "1.0"
